# AI-Native-GTM-Platform-Prospect-Backbone-Architecture

./: .dockerignore  .gitignore  README.md  architecture-decisions.md  docker-compose.yml  plan.md  repo_structure.md  report.20260518.163741.30980.0.001.json  tasks.md
backbone/: alembic.ini  pyproject.toml
backbone/alembic/: env.py
backbone/alembic/versions/: 20260517_0001_initial_gtm_schema.py  20260518_0002_integration_run_rate_limited.py
backbone/app/: __init__.py  main.py
backbone/app/agents/: __init__.py  base.py  contact_enrichment.py  costing.py  intent_signal.py  llm.py  outreach.py  prompt_loader.py  prospect_research.py  runtime.py  value_hypothesis.py  workflow.py
backbone/app/api/: deps.py
backbone/app/audit/: __init__.py  interfaces.py  service.py
backbone/app/auth/: __init__.py  interfaces.py  jwt.py  rbac.py
backbone/app/contracts/: __init__.py  common.py
backbone/app/core/: __init__.py  config.py  rate_limit.py  tenancy.py
backbone/app/integrations/: __init__.py  errors.py  registry.py  secrets.py
backbone/app/models/: __init__.py  artifacts.py  custom_fields.py  enums.py  gtm.py  identity.py  integrations.py  mixins.py  prospect.py  provenance.py  tenant.py  workflows.py
backbone/app/observability/: __init__.py  interfaces.py  logging.py  runtime.py
backbone/app/repositories/: __init__.py  account_repository.py  audit_repository.py  integration_repository.py  interfaces.py  prospect_workflow_repository.py
backbone/app/seed/: __init__.py  demo_generator.py  loader.py
backbone/app/services/: __init__.py  accounts.py  (+2 more)
(+139 files in other folders)
